# graduation

./: .gitignore
ImClient/: CMakeLists.txt  addfrienddialog.h  addfrienddiolog.cpp  chatwidget.cpp  chatwidget.h  httpmanager.cpp  httpmanager.h  loginwindow.cpp  loginwindow.h  loginwindow.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  newfriendwidget.cpp  newfriendwidget.h  registerwindow.cpp  registerwindow.h  registerwindow.ui
im-platform/: pom.xml
im-platform/.continue/agents/: new-config.yaml
im-platform/im-auth/: pom.xml
im-platform/im-auth/http/: test.http
im-platform/im-auth/src/main/java/com/graduation/auth/: AuthApplication.java
im-platform/im-auth/src/main/java/com/graduation/auth/common/: JwtUtils.java  Result.java
im-platform/im-auth/src/main/java/com/graduation/auth/controller/: AuthController.java  (+1 more)
im-platform/im-auth/src/main/java/com/graduation/im/: AuthApplication.java
im-platform/im-auth/src/main/resources/: application.yml
im-platform/im-auth/src/test/java/com/graduation/auth/: AuthApplicationTests.java
im-platform/im-auth/src/test/java/com/graduation/im/: AuthApplicationTests.java
im-platform/im-gateway/: pom.xml
im-platform/im-gateway/src/main/java/com/graduation/gateway/: GatewayApplication.java
im-platform/im-gateway/src/main/resources/: application.yml
im-platform/im-server/: pom.xml
im-platform/im-server/http/: test.http
im-platform/im-server/src/main/java/com/graduation/im/: ImServerApplication.java
im-platform/im-server/src/main/resources/: application.yml
middleware/: docker-compose.yml
(+45 files in other folders)
